base/BoozeAndBites-Vue/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: boozeandbites-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: boozeandbites-frontend
  template:
    metadata:
      labels:
        app: boozeandbites-frontend
    spec:
      containers:
        - name: boozeandbites-frontend
          image: ghcr.io/veronikaespa/boozeandbites-vue:latest
          ports:
            - containerPort: 8071
