base/BoozeAndBites-Vue/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: boozeandbites-frontend
spec:
  selector:
    app: boozeandbites-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8071
  type: NodePort                # NodePort, LoadBalancer, ClusterIP
