base/BoozeAndBites-Vue/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: boozeandbites-frontend
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    # cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - boozeandbites.vesparragoza.dev
      secretName: boozeandbites-frontend-tls
  rules:
